# clicktsdb

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  clicktsdb-presentation.excalidraw  docker-compose.yml  generate_influx_data.py  notes.md
clicktsdb/: Cargo.toml
clicktsdb/src/: main.rs  settings.rs  web.rs
configs/: clicktsdb.yml  prometheus.yml
fts/: Cargo.toml
fts/src/: core.rs  doc_store.rs  error.rs  lib.rs  matcher.rs  postings.rs  query.rs  segment.rs
services/: Cargo.toml  build.rs
services/src/: lib.rs
services/src/influxdb/: core.rs  mod.rs
services/src/prometheus/: mod.rs  promql.rs
services/src/prometheus/remote/: mod.rs  types.rs  utils.rs
services/src/prometheus/remote/prompb/: types.proto
storage/: Cargo.toml
storage/src/: clickhouse.rs  core.rs  error.rs  lib.rs  native.rs  settings.rs
