[package]
name = "clicktsdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
config = {workspace = true}
serde = {workspace = true}
axum = {workspace = true}
tokio = {workspace = true}

futures = "0.3.25"
prost = "0.12.3"
snap = "1.1.0"
async-trait = "0.1.74"
thiserror = "1.0.50"
structopt = { version = "0.3", default-features = false }

serde_json.workspace = true

services = {workspace = true}
storage = {workspace = true}
