[package]
name = "services"
version = "0.1.0"
edition = "2021"
description = "Indexing and full-text search on label/value pairs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
serde = {workspace = true}
axum = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}

futures = "0.3.25"
prost = "0.12.3"
snap = "1.1.0"
async-trait = "0.1.74"
thiserror = "1.0.50"
influxdb-line-protocol = "2.0.0"
promql-parser = "0.3.1"

storage = {workspace = true}
fts = {workspace = true}

[build-dependencies]
prost-build = { version = "0.12.3" }
