[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "Indexing and full-text search on label/value pairs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
serde = {workspace = true}
tokio-stream = { workspace = true }
futures = { workspace = true }
tokio = {workspace = true}
serde_json = {workspace = true}

fts ={workspace = true}

clickhouse = "0.11.6"
thiserror = "1.0.50"
fasthash = "0.4.0"
hashbrown = "0.14.3"
derivative = "2.2.0"
